fixed spacing on question

--- a/index.css
+++ b/index.css
@@ -29,7 +29,7 @@ h1 {
     line-height: 20px;
     width: 300px;
     padding: 10px;
-    padding-top: 20px;
+    padding-top: 10px;
     border: 2px solid darkgray;
     border-radius: 15px;
     margin:  auto;
